fix(lightbox): update z-index for lightbox component to ensure proper stacking

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -710,6 +710,10 @@ article th {
   z-index: 100;
   width: 100%;
 
+  &.lightbox-open {
+    z-index: 100000 !important;
+  }
+
   .gallery-img {
     position: relative;
     display: block;
